--- a/MvcMusicStore/MvcMusicStore.csproj
+++ b/MvcMusicStore/MvcMusicStore.csproj
@@ -21,6 +21,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -112,6 +113,12 @@
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="PerformanceCounterHelper, Version=1.3.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\PerformanceCounterHelper.1.3.0.2\lib\net40\PerformanceCounterHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="PerformanceCounterHelper.Installer, Version=1.3.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\PerformanceCounterHelper.Installer.1.3.0.2\lib\net40\PerformanceCounterHelper.Installer.exe</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -193,6 +200,7 @@
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\SampleData.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
+    <Compile Include="PerfCounters\StoreCounters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ShoppingCartRemoveViewModel.cs" />
